@@ -7,12 +7,12 @@
 		</field>
 		<value>{
 			"text/x-web-markdown": {
-				"Picture": "![[![{1}]!] {@class=image-[![{4}]!]}]([![Url:!:{0}]!]/image_[![{3}]!] '[![{2}]!]')",
-				"Link": "[{1}]([![Url:!:{0}]!] '[![{2}]!]')"
+				"Picture": "![[![{1}]!] {@class=image-[![{4}:!:left]!]}]({0}/image_[![{3}:!:preview]!] '[![{2}]!]')",
+				"Link": "[{1}]({0} '[![{2}]!]')"
 			},
 			"text/x-nazmd": {
-				"Picture": "![[![{1}]!] {@class=image-[![{4}]!]}]([![Url:!:{0}]!]/image_[![{3}]!] '[![{2}]!]')",
-				"Link": "[{1}]([![Url:!:{0}]!] '[![{2}]!]')"
+				"Picture": "![[![{1}]!] {@class=image-[![{4}:!:left]!]}]({0}/image_[![{3}:!:preview]!] '[![{2}]!]')",
+				"Link": "[{1}]({0} '[![{2}]!]')"
 			},
 			"text/x-web-textile": {
 				"Picture": "![![Source:!:http://]!]([![Alternative text]!])!",
